[metadata]
name = discord-py-utilities
version = 0.0.8.3
author = Rico Stryker
author_email = ricoisdenaam@gmail.com
description = A collection of tools for Discord bots to enhance functionality and ease of use.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wolfricoz/discord_tools
project_urls =
    Bug Tracker = https://github.com/wolfricoz/discord_tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
